--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "core-js": "3.6.5",
-    "vue": "3.2.37",
+    "vue": "^3.2.37",
     "vue-router": "4.1.3"
   },
   "devDependencies": {
